# pane_jump_plugin

./: Cargo.toml  bacon.toml  plugin-dev-workspace.kdl  test_layout.kdl
project_picker/: Cargo.toml
project_picker/src/: configuration.rs  main.rs
src/: command_queue.rs  file_picker.rs  focus.rs  fzf.rs  init.rs  input.rs  main.rs  message.rs  pane.rs  render.rs  utils.rs  wavedash.rs
utils/: Cargo.toml
utils/src/: fzf.rs  lib.rs  pane.rs  project.rs  template.rs
wavedash/: Cargo.toml
wavedash/src/: command_queue.rs  focus.rs  init.rs  input.rs  main.rs  message.rs  pane.rs  project.rs  template.rs
