[package]
name = "wavedash"
version = "0.1.0"
authors = ["SecretPocketCat"]
edition = "2018"

[dependencies]
ansi_term = "0.12.1"
# zellij-tile = { git = "https://github.com/SecretPocketCat/zellij", branch = "hide_pane_commands" }
zellij-tile = { path = "/home/spc/projects/zellij/zellij/zellij-tile" }
chrono = "0.4.0"
itertools = "0.12.1"
# zellij-tile-utils = { git = "https://github.com/SecretPocketCat/zellij", branch = "hide_pane_commands" }
zellij-tile-utils = { path = "/home/spc/projects/zellij/zellij/zellij-tile-utils" }
uuid = { version = "1.8.0", features = ["v4"] }
strum_macros = "0.26.2"
strum = "0.26.2"
lazy_static = "1.4.0"
