[workspace]
resolver = "2"
members = ["wavedash", "project_picker", "utils"]

[workspace.dependencies]
# zellij-tile = { git = "https://github.com/SecretPocketCat/zellij", branch = "hide_pane_commands" }
zellij-tile = { path = "/home/spc/projects/zellij/zellij/zellij-tile" }
uuid = { version = "1.8.0", features = ["v4"] }
