[workspace]
resolver = "2"
members = ["wavedash", "project_picker", "utils"]

[workspace.dependencies]
# zellij-tile = { git = "https://github.com/SecretPocketCat/zellij", branch = "hide_pane_commands" }
zellij-tile = { path = "/home/spc/projects/zellij/zellij/zellij-tile" }
uuid = { version = "1.8.0", features = ["v4"] }
strum_macros = "0.26.2"
strum = "0.26.2"
anyhow = "1.0.82"
serde_json = "1.0.116"
