[package]
name = "utils"
version = "0.1.0"
authors = ["SecretPocketCat"]
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
zellij-tile = { workspace = true }
chrono = "0.4.0"
itertools = "0.12.1"
# zellij-tile-utils = { git = "https://github.com/SecretPocketCat/zellij", branch = "hide_pane_commands" }
zellij-tile-utils = { path = "/home/spc/projects/zellij/zellij/zellij-tile-utils" }
uuid = { version = "1.8.0", features = ["v4"] }
lazy_static = "1.4.0"
indexmap = "2.2.6"
kdl = "4.6.0"
anyhow = { workspace = true }
strum_macros = { workspace = true }
strum = { workspace = true }
test-case = "3.3.1"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = { workspace = true }
num = "0.4.2"

